--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -1,123 +1,254 @@
-
-.container--cart{
-
+.container--cart {
 }
 
-.cart{
-
+.cart {
 }
 
-.cart__top{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 50px;
+.cart__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 50px;
 }
 
-.contentCart__title{
-
+.contentCart__title {
 }
-.contentCart__title img, .cart__clear img{
-    margin-right: 10px;
-}
-
-.cart__clear{
-
+.contentCart__title img,
+.cart__clear img {
+  margin-right: 10px;
 }
 
-.cart-content__items{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-row-gap: 20px;
-    width: 100%;
-
+.cart__clear {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.5;
+  transition: 0.1s ease-in-out;
+  cursor: pointer;
 }
 
-.cart-item{
-    align-items: center;
-    background: #a1a1a1;
-    display: grid;
-    grid-template-columns: 100px 3fr  2fr 1fr;
+.cart__clear:hover {
+  opacity: 1;
 }
 
-.cart-item-image{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.cart-content__items {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 20px;
+  width: 100%;
+  justify-items: center;
 }
 
-.cart-item-image img{
-    width: 100%
+.cart-item {
+  position: relative;
+  align-items: center;
+  display: grid;
+  width: 80%;
+  grid-template-columns: 100px 3fr 1fr 1fr 100px;
+  padding: 20px;
+  padding-left: 20px;
+  border-radius: 15px;
+  box-shadow: 0px 0px 10px 0px #b7b7b7;
 }
 
-.cart-item-name{
-
+.cart-info {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+}
+.cart-info svg {
+  opacity: 0.5;
+  cursor: pointer;
 }
 
-.cart-item-count{
-
+.container--additionInfo {
+  position: absolute;
+  top: 20px;
+  background: #d2d2d2;
+  z-index: 20;
+  border-radius: 15px;
+  padding: 10px;
+  left: 30px;
+  width: 200px;
 }
 
-.cart-item-price{
-
+.cart-item-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.cart-item-delete{
-
+.cart-item-image img {
+  width: 100%;
 }
 
-.cart__bottom{
-    margin-top: 20px;
-    border-top: 1px solid #a9a9a9;
-    padding-top: 15px;
+.cart-item-name {
+  display: grid;
+  margin-left: 25px;
+  justify-content: start;
+  grid-row-gap: 5px;
 }
 
-.cart__bottom-details{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
+.cart-item-typepizza {
+  opacity: 0.5;
 }
 
-.cart__bottom-buttons{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.cart-item-namepizza {
+  font-size: 20px;
+  font-weight: bold;
 }
 
-.button.go-back-btn{
-    padding: 10px;
-    display: flex;
-    width: auto;
-    justify-content: center;
-    text-decoration: none;
-    color: black;
-    font-weight: 500;
-    font-size: 18px;
-    align-items: center;
-
+.cart-item-count {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-.button.go-back-btn img{
-    opacity: 0;
-    transition: .2s ease-in-out;
+.cart-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.1s ease-in-out;
 }
 
-.button.go-back-btn:hover img{
-    margin-right: 5px;
-    opacity: 1;
+.cart-btn:active {
+  transform: scale(0.9);
+}
+.cart-btn.btn-subtraction {
+}
+.cart-btn.btn-add {
 }
 
-
-.button.pay-btn{
-    padding: 10px;
-    background: #ee5c02;
-    color: white;
-    font-size: 18px;
-    width: auto;
-
+.cart-btn.btn-delete {
+  opacity: 0.4;
+  transition: 0.2s ease-in-out;
+}
+.cart-item-price {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-.button.pay-btn span{
+.cart-item-delete {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  border-left: 1px solid;
+}
 
+.cart-item-delete:hover .cart-btn.btn-delete {
+  opacity: 1;
+}
+
+.cart-item-delete:hover .cart-btn.btn-delete svg {
+  color: rgb(161, 1, 1);
+}
+
+.cart__bottom {
+  margin-top: 20px;
+  border-top: 1px solid #a9a9a9;
+  padding-top: 15px;
+}
+
+.cart__bottom-details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.cart__bottom-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.button.go-back-btn {
+  padding: 10px;
+  display: flex;
+  width: auto;
+  justify-content: center;
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+  font-size: 18px;
+  align-items: center;
+}
+
+.button.go-back-btn img {
+  opacity: 0;
+  transition: 0.2s ease-in-out;
+}
+
+.button.go-back-btn:hover img {
+  margin-right: 5px;
+  opacity: 1;
+}
+
+.button.pay-btn {
+  padding: 10px;
+  background: #ee5c02;
+  color: white;
+  font-size: 18px;
+  width: auto;
+}
+
+.button.pay-btn span {
+}
+
+.button.go-back-btn2 {
+  text-decoration: none;
+  border: 1px solid black;
+  padding: 10px;
+  background: black;
+  color: white;
+  font-size: 18px;
+  width: auto;
+}
+
+.DefoltCartTop {
+  display: grid;
+  justify-content: center;
+}
+
+.cartStatus {
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  margin-bottom: 15px;
+}
+.DefoltCartTop p {
+  margin: 5px 0px;
+  display: flex;
+  justify-content: center;
+  opacity: 0.5;
+}
+
+.defoltCartImage {
+  margin: 40px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.defoltCartImage img {
+  width: 50%;
+}
+
+.defoltCartBottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.defoltCart {
+  margin-top: 150px;
 }
